--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-pwa-assets": "pwa-assets-generator",
+    "serve": "cd ./dist && npx http-server && cd .."
   },
   "dependencies": {
     "@mdi/font": "^7.3.67",
+    "@vueuse/core": "^10.6.1",
     "mongodb": "^6.3.0",
     "pnpm": "^8.11.0",
     "vite-plugin-pwa": "^0.17.0",
@@ -24,6 +27,7 @@
     "workbox-strategies": "^7.0.0"
   },
   "devDependencies": {
+    "@vite-pwa/assets-generator": "0.0.11",
     "@vitejs/plugin-vue": "^4.5.0",
     "vite": "^5.0.0",
     "workbox-window": "^7.0.0"
