--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@mdi/font": "^7.3.67",
     "@vueuse/core": "^10.6.1",
+    "axios": "^1.6.2",
     "mongodb": "^6.3.0",
     "pnpm": "^8.11.0",
     "vite-plugin-pwa": "^0.17.0",
     "vue": "^3.3.8",
+    "vue-router": "^4.2.5",
     "vuetify": "^3.4.3",
     "workbox-background-sync": "^7.0.0",
     "workbox-cacheable-response": "^7.0.0",
