--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdi/font": "^7.3.67",
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.2",
+    "lz-string": "^1.5.0",
     "mongodb": "^6.3.0",
     "pnpm": "^8.11.0",
     "vite-plugin-pwa": "^0.17.0",
